# personal-agent-student

./: .env.colab.example  .gitignore  README.md  launch  personal_agent_colab_server.ipynb  pyproject.toml  run.py
launchd/: edu.colorado.csci4622.personal-agent-hidden-feedback.plist
src/course_project/: agent_loop.py  cli.py  config.py  json_tools.py  social_market.py  student_api.py
src/course_project/llm/: factory.py  local_openai.py  scripted.py  types.py
src/course_project/scenarios/: loader.py
src/course_project/scenarios/learned_memory_stage_v1/: scenario.json
src/course_project/scenarios/memory_stage_v1/: scenario.json
src/course_project/worlds/: base.py  campus_tools.py  factory.py
student_scaffold/: ARCHITECTURE.md  MILESTONES.md  agent.py  common.py  mini_0_finish.py  mini_1_model_call.py  mini_2_parse_action.py  mini_3_one_tool.py  mini_4_one_round_trip.py  mini_5_simple_loop.py  mini_6_observe_prompts.py  prompts.py
student_scaffold_social/: CHALLENGE.md  agent.py
student_scaffold_stage2/: ARCHITECTURE.md  MILESTONES.md  __init__.py  agent.py  common.py  mini_0_observe_memory.py  mini_1_write_memory.py  mini_2_read_memory.py  mini_3_choose_slot.py  mini_4_memory_loop.py  prompts.py
student_scaffold_stage3/: ARCHITECTURE.md  MILESTONES.md  __init__.py  agent.py  common.py  mini_0_observe_extractor.py  mini_1_predict_preference.py  mini_2_write_learned_memory.py  mini_3_learned_memory_loop.py  preference_extractor.py  prompts.py  train.py
training_data/: preference_examples.jsonl
(+2 files in other folders)
